# beehive

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  build.sh  index.html  install.sh  package-lock.json  package.json  plan.md  vite.config.ts
.github/workflows/: bump-version.yml  deploy-web.yml  release.yml
.opencode/plans/: 1772475486195-curious-circuit.md
cli/: Cargo.toml
cli/src/: app.rs  commands.rs  config.rs  fuzzy.rs  keyboard.rs  main.rs  terminal.rs  ui.rs  update.rs
docker/tui-linux/: Dockerfile
docs/: index.html
scripts/: bump-release-version.js  bump-release-version.mjs  release-version.js  release-version.mjs  release-version.test.js  release-version.test.mjs  set-release-version.js  set-release-version.mjs  tui-linux-docker.sh
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: hive.rs  lib.rs  main.rs  pty.rs
src/components/: CombListScreen.tsx  CopyCombModal.tsx  CreateNestModal.tsx  CustomButtonsModal.tsx  HelpScreen.tsx  HiveListScreen.tsx  MainLayout.tsx  NewCombModal.tsx  PreflightScreen.tsx  SettingsScreen.tsx  SetupScreen.tsx  Sidebar.tsx  TerminalPane.tsx  Toast.tsx  WorkspaceGrid.tsx  WorkspaceScreen.tsx
src/hooks/: useSortable.ts
web/: package-lock.json  package.json
web/public/: install.sh
web/src/app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts  twitter-image.tsx
web/src/components/: cta.tsx  (+8 more)
