[package]
name = "beehive"
version = "0.1.93"
description = "Orchestrate coding agents across isolated git workspaces"
authors = ["Mykyta Storozhenko <storozhenkomykyta@gmail.com>"]
repository = "https://github.com/storozhenko98/beehive"
license = "MIT"
edition = "2021"

[lib]
name = "beehive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

